# Ascendustry

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  rustfmt.toml
.zed/: settings.json
_apart/: .roadmap_strachy.txt  frustum_chunk_cull.rs  manager.rs  mesh.rs
_notice/: compile.txt
assets/: ores.json
client/: Cargo.toml  game.rs  lib.rs  main.rs
engine/: Cargo.toml  lib.rs  tests.rs
engine/audio/: audio_manager.rs
engine/core/: application.rs  frame.rs  state.rs
engine/geometry/: vertex.rs
engine/gpu/: allocator.rs  context.rs  factory.rs  layouts.rs  mod.rs  smart_buffer.rs  tools.rs
engine/gpu/allocator/: data_structures.rs  entry.rs  error.rs  gap_manager.rs  gpu_allocator.rs  mod.rs  write_operation.rs
engine/gpu/factories/: bind_group.rs  pipeline.rs  wrapper.rs
engine/gpu/resources/: bind_group.rs  pipeline.rs  wrapper.rs
engine/gpu/textures/: array.rs  atlas.rs  data.rs  id.rs  manager.rs  mod.rs
engine/network/: client.rs
engine/render/: camera.rs  debug.rs  manager.rs  mod.rs  modes.rs  options.rs  render.rs  texture.rs
engine/render/text/: text_renderer.rs
engine/render/ui/: mod.rs  render.rs
engine/render/ui/geometry/: mod.rs  ui_vertex.rs
engine/render/ui/interpreter/: compiler.rs  translator.rs
engine/render/ui/widgets/: list.rs  mod.rs  panel.rs  textured_panel.rs
engine/render/utils/: smart_buffer.rs
game/: Cargo.toml  constants.rs  lib.rs  player.rs  tests.rs  types.rs
game/assets/: block_loader.rs  item_loader.rs  mod.rs
game/inventory/: item_manager.rs  mod.rs  tests.rs
game/world/: modified_chunk.rs  raycast.rs
game/world/data/: block.rs  chunk.rs
game/world/generation/: chunk.rs  chunk_generator.rs  mod.rs  ore_gen.rs
launcher/: Cargo.toml
network/: Cargo.toml  client_connection.rs  crypto.rs  error.rs  lib.rs  messages.rs  network_protocol.rs  tests.rs  traits.rs
physics/: Cargo.toml  aabb.rs  body.rs  collision.rs  collision_world.rs  (+3 more)
satiscore/: Cargo.toml  constants.rs  lib.rs  tests.rs
satiscore/network/: messages.rs
satiscore/utils/: hash_vec.rs  id_manager.rs  mod.rs  unique_queue.rs  updatable.rs
satiscore/world/data/: chunk.rs
satiscore/world/generation/: chunk_generator.rs
server/: Cargo.toml
server/src/: broadcast.rs  chunk_generator.rs  client.rs  config.rs  identity.rs  lib.rs  main.rs  metrics.rs  persistence.rs  player.rs  rate_limiter.rs  server.rs  state.rs  tests.rs  world.rs
server/src/game/: handler.rs  validator.rs
server/src/network/: connection.rs
server/src/network_server/: connection.rs
server/src/tui/: app.rs  bridge.rs
(+99 files in other folders)
