[package]
name = "engine"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
server = []
client = []

[dependencies]
serde = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
bincode = "1.3"
sha2 = { workspace = true}
getrandom = "0.2"
noise = "0.9.0"
num_cpus = "1.17.0"
aes-gcm = "0.10.3"
cgmath = "0.18.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
rustc-hash = "2.1.2"
wgpu = "28.0"
anyhow = "1.0.102"
wgpu_text = "28.0"
pollster = "0.4.0"
satiscore = { version = "0.1.0", path = "../satiscore" }
winit = "0.30.13"
kira = "0.12.0"
