[package]
name = "game"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
server = []
client = []

[dependencies]
cgmath = { workspace = true }
serde = { workspace = true }
rustc-hash = { workspace = true }
noise = { workspace = true }
rayon = { workspace = true }
num_cpus = { workspace = true }
project_core = { path = "../project_core" }
