[package]
name = "network"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[features]
server = []
client = []

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
tokio = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
aes-gcm = { workspace = true }
log = { workspace = true }

game = { path = "../game" }
