[package]
name = "server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "server"
path = "src/main.rs"

[lib]
name = "server"
path = "src/lib.rs"

[features]
default = ["server"]
server = []

[dependencies]
cgmath = "0.18.0"

tokio = { workspace = true }
serde = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.102"
rand = "0.8"
env_logger = "0.10"


satiscore = { path = "../satiscore" }
network = { version = "0.1.0", path = "../network" }
